# nhsd-git-secrets-precommit

./: .git-secrets-custom-rules.txt.example  .gitallowed-base  .gitignore  .pre-commit-hooks.yaml  INSTALL.md  LICENSE  README.md  STRUCTURE.md  example-.pre-commit-config.yaml  pyproject.toml  test-precommit-config.yaml  test.sh
docs/: TROUBLESHOOTING.md
rules/: custom-rules.txt.example  nhsd-rules-deny.txt
scripts/: debug-git-secrets.sh  git-secrets-wrapper.ps1  git-secrets-wrapper.sh
