[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nhsd-git-secrets-precommit"
dynamic = ["version"]
description = "NHSD Git Secrets pre-commit hook for detecting secrets in commits"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "NHS England", email = "opensource@nhs.net"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]
keywords = ["git", "secrets", "security", "pre-commit", "nhsd"]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/nhsengland/nhsd-git-secrets-precommit"
Repository = "https://github.com/nhsengland/nhsd-git-secrets-precommit"
Issues = "https://github.com/nhsengland/nhsd-git-secrets-precommit/issues"

[tool.setuptools_scm]
write_to = "_version.py"

[tool.setuptools.package-data]
"*" = [
    "scripts/*",
    "rules/*",
    "*.yaml",
    "*.yml"
]